S3-Project compleated with test